fixing license headers and plugin checks