@@ -188,17 +188,6 @@
       </properties>
     </profile>
     <profile>
-      <id>travis</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <properties>
-        <argLine>-Xms4g -Xmx4g -XX:MaxPermSize=512m -XX:MaxDirectMemorySize=10g
-          -Dlog4j2.configurationFile=log4j2-fatal-only.xml
-        </argLine>
-      </properties>
-    </profile>
-    <profile>
       <id>github-actions</id>
       <activation>
         <activeByDefault>false</activeByDefault>
@@ -1419,7 +1408,7 @@
         <plugin>
           <groupId>com.mycila</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>2.8</version>
+          <version>4.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -1562,52 +1551,58 @@
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
-        <version>2.8</version>
+        <version>4.0</version>
         <configuration>
           <header>${pinot.root}/HEADER</header>
           <headerDefinitions>
-            <headerDefinition>${pinot.root}/rstheaderdefinition.xml</headerDefinition>
+            <headerDefinition>${pinot.root}/headerdefinition.xml</headerDefinition>
           </headerDefinitions>
           <excludes>
-            <!-- Exclude build files for docs -->
-            <exclude>docs/_build/**</exclude>
-            <exlude>docs/Makefile</exlude>
-
             <!-- Text and log files -->
             <exclude>**/*.txt</exclude>
             <exclude>**/*.log</exclude>
+            <exclude>**/*.list</exclude>
+            <exclude>**/*.out</exclude>
+            <exclude>**/*.generated</exclude>
+            <exclude>**/*.json</exclude>
+            <exclude>**/*.schema</exclude>
 
-            <exclude>**/*.pql</exclude>
-            <exclude>**/*.config</exclude>
-            <exclude>**/*.csv</exclude>
+            <!-- JDBC Drivers -->
+            <exclude>**/java.sql.*</exclude>
+
+            <!-- Spark datasource register -->
+            <exclude>**/org.apache.spark.sql.sources.DataSourceRegister</exclude>
+
+            <!-- Binary files -->
             <exclude>**/*.avro</exclude>
-            <exclude>**/*.conf</exclude>
-            <exclude>**/appAssemblerScriptTemplate</exclude>
-
-            <exclude>**/zone-index.properties</exclude>
-
-            <!-- Resource directories under test -->
-            <exclude>**/src/test/resources/**</exclude>
+            <exclude>**/*.avsc</exclude>
+            <exclude>**/*.csv</exclude>
+            <exclude>**/*.desc</exclude>
+            <exclude>**/*.parquet</exclude>
+            <exclude>**/*.gz</exclude>
+            <exclude>**/*.orc</exclude>
+            <exclude>**/*.dict</exclude>
+            <exclude>**/*.raw</exclude>
+            <exclude>**/*.mapping</exclude>
+            <exclude>**/*.ser</exclude>
+            <exclude>**/*.v1</exclude>
+            <exclude>**/*.v2</exclude>
 
             <!-- Auto-generated target directories -->
             <exclude>target/**</exclude>
             <exclude>pinot-*/target/**</exclude>
 
-            <!-- Top level directories -->
-            <exclude>thirdeye/**</exclude>
+            <!-- Pinot Website (not part of the distribution) -->
             <exclude>website/**</exclude>
-            <exclude>docker/**</exclude>
+
+            <!-- Docker and Kubernetes (not part of the distribution) -->
             <exclude>kubernetes/**</exclude>
+            <exclude>docker/**</exclude>
 
-            <!-- Docker image configs -->
-            <exclude>docker/images/pinot-thirdeye/**</exclude>
-
-            <!-- Note: this will exclude all single character directories under the root directory.
-            We use this to exclude the temporary files generated during build -->
-            <exclude>?/**</exclude>
+            <!-- Pinot-Druid Benchmark (not part of the distribution) -->
+            <exclude>contrib/**</exclude>
 
             <!-- Top level files -->
-            <exclude>.codecov*</exclude>
             <exclude>HEADER</exclude>
             <exclude>LICENSE*</exclude>
             <exclude>NOTICE*</exclude>
@@ -1616,26 +1611,29 @@
             <!-- js, css files that are exact copies of the third-party works. In this case, the original header has to
             be kept. Please refer to 'Treatment of Third-party works' in https://www.apache.org/legal/src-headers.html
             -->
-            <exclude>**/codemirror/**</exclude>
-            <exclude>**/codemirror*</exclude>
-            <exclude>**/foundation*</exclude>
-            <exclude>**/angular*</exclude>
-            <exclude>**/underscore*</exclude>
-            <exclude>**/jquery*</exclude>
-            <exclude>**/normalize*</exclude>
-            <exclude>**/handlebars*</exclude>
-            <exclude>**/beautify*</exclude>
             <exclude>**/node_modules/**</exclude>
             <exclude>**/dist/**</exclude>
-            <exclude>**/.factorypath</exclude>
-            <exclude>**/app/**</exclude>
-            <exclude>**/src/main/resources/dist/**</exclude>
-            <exclude>**/src/main/resources/.*</exclude>
+            <exclude>**/src/main/resources/*.*rc</exclude>
           </excludes>
           <mapping>
+            <java>JAVADOC_STYLE</java>
+            <scala>JAVADOC_STYLE</scala>
             <thrift>JAVADOC_STYLE</thrift>
             <g4>JAVADOC_STYLE</g4>
+            <ts>JAVADOC_STYLE</ts>
+            <tsx>JAVADOC_STYLE</tsx>
+            <config>SCRIPT_STYLE</config>
+            <queries>SCRIPT_STYLE</queries>
+            <results>SCRIPT_STYLE</results>
+            <MockMaker>SCRIPT_STYLE</MockMaker>
+            <appAssemblerScriptTemplate>SCRIPT_STYLE</appAssemblerScriptTemplate>
+            <pql>SCRIPT_STYLE</pql>
+            <sql>SCRIPT_STYLE</sql>
+            <conf>DOUBLESLASH_STYLE</conf>
+            <cfg>DOUBLESLASH_STYLE</cfg>
+            <proto>DOUBLESLASH_STYLE</proto>
             <rst>RST_STYLE</rst>
+            <readme>RST_STYLE</readme>
           </mapping>
         </configuration>
         <executions>
@@ -1660,12 +1658,6 @@
         </executions>
         <configuration>
           <excludes>
-            <!-- Sphynx auto generated makefile -->
-            <exclude>docs/Makefile</exclude>
-
-            <!-- Exclude build files for docs -->
-            <exclude>docs/_build/**</exclude>
-
             <!-- Exclude license copies -->
             <exclude>licenses/**</exclude>
             <exclude>licenses-binary/**</exclude>
@@ -1673,49 +1665,47 @@
             <!-- Exclude build targets -->
             <exclude>**/target/**</exclude>
 
+            <!-- Text and log files -->
+            <exclude>**/*.txt</exclude>
+            <exclude>**/*.log</exclude>
+            <exclude>**/*.list</exclude>
+            <exclude>**/*.out</exclude>
+            <exclude>**/*.generated</exclude>
+            <exclude>**/*.json</exclude>
+            <exclude>**/*.schema</exclude>
+
+            <!-- JDBC Drivers -->
+            <exclude>**/java.sql.*</exclude>
+
+            <!-- Spark datasource register -->
+            <exclude>**/org.apache.spark.sql.sources.DataSourceRegister</exclude>
+
+            <!-- Binary files -->
+            <exclude>**/*.avro</exclude>
+            <exclude>**/*.avsc</exclude>
+            <exclude>**/*.csv</exclude>
+            <exclude>**/*.desc</exclude>
+            <exclude>**/*.parquet</exclude>
+            <exclude>**/*.gz</exclude>
+            <exclude>**/*.orc</exclude>
+            <exclude>**/*.dict</exclude>
+            <exclude>**/*.raw</exclude>
+            <exclude>**/*.mapping</exclude>
+            <exclude>**/*.ser</exclude>
+            <exclude>**/*.v1</exclude>
+            <exclude>**/*.v2</exclude>
+            <exclude>**/appAssemblerScriptTemplate</exclude>
 
             <!-- js, css files that are exact copies of the third-party works. In this case, the original header has to
             be kept. Please refer to 'Treatment of Third-party works' in https://www.apache.org/legal/src-headers.html
             -->
-            <exclude>**/codemirror/**</exclude>
-            <exclude>**/codemirror*</exclude>
-            <exclude>**/foundation*</exclude>
-            <exclude>**/angular*</exclude>
-            <exclude>**/underscore*</exclude>
-            <exclude>**/jquery*</exclude>
-            <exclude>**/normalize*</exclude>
-            <exclude>**/handlebars*</exclude>
-            <exclude>**/beautify*</exclude>
-            <exclude>**/src/main/resources/.*</exclude>
-            <exclude>**/src/main/resources/dist/**</exclude>
-            <exclude>**/src/main/resources/node_modules/**</exclude>
-
-            <!-- Binary files -->
-            <exclude>**/*.json</exclude>
-            <exclude>**/*.pql</exclude>
-            <exclude>**/*.log</exclude>
-            <exclude>**/*.csv</exclude>
-            <exclude>**/*.avro</exclude>
-            <exclude>**/*.conf</exclude>
-            <exclude>**/*.config</exclude>
-            <exclude>**/*.yml</exclude>
-            <exclude>**/*.yaml</exclude>
-            <exclude>**/*.properties</exclude>
+            <exclude>**/node_modules/**</exclude>
+            <exclude>**/dist/**</exclude>
+            <exclude>**/*.*rc</exclude>
+            <exclude>**/src/main/resources/*.*rc</exclude>
 
             <!-- IDE files -->
             <exclude>**/*.iml</exclude>
-
-            <!-- Top level -->
-            <exclude>.codecov*</exclude>
-
-            <!-- Test Resources -->
-            <exclude>**/test/resources/**</exclude>
-
-            <!-- JDBC Drivers -->
-            <exclude>**/main/resources/java.sql.*</exclude>
-
-            <!-- Spark datasource register -->
-            <exclude>**/src/main/resources/META-INF/services/org.apache.spark.sql.sources.DataSourceRegister</exclude>
 
             <!-- Pinot Website (not part of the distribution) -->
             <exclude>website/**</exclude>
@@ -1726,10 +1716,6 @@
 
             <!-- Pinot-Druid Benchmark (not part of the distribution) -->
             <exclude>contrib/**</exclude>
-
-            <!-- Third eye (not part of the distribution) -->
-            <exclude>thirdeye/**</exclude>
-            <exclude>docker/images/pinot-thirdeye/**</exclude>
 
             <!-- Github template files -->
             <exclude>.github/*.md</exclude>
